--- a/form.html
+++ b/form.html
@@ -14,9 +14,9 @@
                 <div>
                     <select name ="list">
                         <option disabled selected>How old are you?</option>
-                        <option>5-9</option>
-                        <option>10-18</option>
-                        <option>18+</option>
+                        <option value="5-9">5-9</option>
+                        <option value="10-18">10-18</option>
+                        <option value ="18+">18+</option>
                     </select>
                 </div>
 
@@ -37,18 +37,18 @@
                 <h2>What is ur favorite food ?</h2>
                 <div class="input">
                 <div>
-                    <input type="checkbox" name="food" value="Hamburguer"/><span>Hamburguer</span>
+                    <input type="checkbox" name="food[]" value="Hamburguer"/><span>Hamburguer</span>
                 </div>
                 <div>
-                    <input type="checkbox" name="food" value="Pizza"/><span>Pizza</span>
+                    <input type="checkbox" name="food[]" value="Pizza"/><span>Pizza</span>
                 </div>
                 <div>
-                    <input type="checkbox" name="food" value="Burrito"/><span>Burrito</span>
+                    <input type="checkbox" name="food[]" value="Burrito"/><span>Burrito</span>
                 </div>
                 </div>
 
                 <div>
-                    <textarea Placeholder=" Put ur ideas here!"></textarea>
+                    <textarea name ="Obs" Placeholder=" Put ur ideas here!"></textarea>
                 </div>
 
                 <div>
